--- a/jips/src/main/resources/prod/config.properties
+++ b/jips/src/main/resources/prod/config.properties
@@ -1,5 +1,5 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://
+jdbc.url=jdbc:mysql://218.150.181.132:3306
 jdbc.username=
 jdbc.password=
 
