Data / About 페이지 개설 및 피드백

--- a/jips/src/main/resources/prod/config.properties
+++ b/jips/src/main/resources/prod/config.properties
@@ -1,5 +1,10 @@
+#jdbc.driverClassName=com.mysql.jdbc.Driver
+#jdbc.url=jdbc:mysql://218.150.181.132:3306
+#jdbc.username=
+#jdbc.password=
+
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://solis.c129hiutah9p.ap-northeast-2.rds.amazonaws.com:3306/deepeagles.jipsdb?zeroDateTimeBehavior=convertToNull&characterEncoding=utf8&useUnicode=true&mysqlEncoding=utf8&useLegacyDatetimeCode=false&serverTimezone=Asia/Seoul
+jdbc.url=jdbc:mysql://solis.c129hiutah9p.ap-northeast-2.rds.amazonaws.com:3306/deepeagles?zeroDateTimeBehavior=convertToNull&characterEncoding=utf8&useUnicode=true&mysqlEncoding=utf8&useLegacyDatetimeCode=false&serverTimezone=Asia/Seoul
 jdbc.username=solis
 jdbc.password=solis#1234
 
